// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`merge config > filtered config > merges publish 1`] = `
{
  "commands": [
    {
      "command": [
        "npm publish",
      ],
      "dependencies": [
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": "javascript",
      "path": "./packages/assemble1",
      "pkg": "assemble1",
      "pkgFile": {
        "currentVersion": "0.0.0",
        "deps": {},
        "file": {
          "content": "{
  "name": "assemble1",
  "version": "0.0.0"
}
",
          "extname": ".json",
          "filename": "package",
          "path": "packages/assemble1/package.json",
        },
        "name": "assemble1",
        "pkg": {
          "name": "assemble1",
          "version": "0.0.0",
        },
        "version": "0.0.0",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 0,
        "versionPrerelease": null,
      },
      "postcommand": null,
      "precommand": null,
      "releaseTag": "assemble1-v0.0.0",
    },
    {
      "command": [
        "cargo publish",
      ],
      "dependencies": [
        "assemble1",
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": "cargo",
      "path": "./packages/namespaced-assemble2",
      "pkg": "@namespaced/assemble1",
      "pkgFile": {
        "currentVersion": "0.0.0",
        "deps": {},
        "file": {
          "content": "{
  "name": "@namedspaced/assemble2",
  "version": "0.0.0"
}
",
          "extname": ".json",
          "filename": "package",
          "path": "packages/namespaced-assemble2/package.json",
        },
        "name": "@namespaced/assemble1",
        "pkg": {
          "name": "@namedspaced/assemble2",
          "version": "0.0.0",
        },
        "version": "0.0.0",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 0,
        "versionPrerelease": null,
      },
      "postcommand": null,
      "precommand": null,
      "releaseTag": "@namespaced/assemble1-v0.0.0",
    },
  ],
  "pipeTemplate": {
    "@namespaced/assemble1": {
      "name": "@namespaced/assemble1",
      "pipe": {
        "pkg": {
          "command": "cargo publish",
          "dependencies": [
            "assemble1",
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": "cargo",
          "path": "./packages/namespaced-assemble2",
          "pkg": "@namespaced/assemble1",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "0.0.0",
          "deps": {},
          "name": "@namespaced/assemble1",
          "pkg": {
            "name": "@namedspaced/assemble2",
            "version": "0.0.0",
          },
          "version": "0.0.0",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 0,
        },
      },
    },
    "assemble1": {
      "name": "assemble1",
      "pipe": {
        "pkg": {
          "command": "npm publish",
          "dependencies": [
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/assemble1",
          "pkg": "assemble1",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "0.0.0",
          "deps": {},
          "name": "assemble1",
          "pkg": {
            "name": "assemble1",
            "version": "0.0.0",
          },
          "version": "0.0.0",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 0,
        },
      },
    },
  },
}
`;

exports[`merge config > filtered config > merges version 1`] = `
{
  "commands": [],
  "pipeTemplate": {},
}
`;

exports[`merge config > full config > merges nested bumps 1`] = `
{
  "commands": [
    {
      "command": [
        true,
      ],
      "dependencies": [
        "assemble1",
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": undefined,
      "path": "./packages/assemble1",
      "pkg": "assemble1",
      "postcommand": null,
      "precommand": null,
      "type": "minor",
    },
    {
      "command": [
        true,
      ],
      "dependencies": [
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": undefined,
      "path": "./packages/assemble2",
      "pkg": "assemble2",
      "postcommand": null,
      "precommand": null,
      "type": "minor",
    },
    {
      "command": [
        true,
      ],
      "dependencies": undefined,
      "errorOnVersionRange": null,
      "manager": undefined,
      "path": undefined,
      "pkg": "all",
      "postcommand": null,
      "precommand": null,
      "type": "minor",
    },
  ],
  "pipeTemplate": {
    "all": {
      "name": "all",
      "pipe": {
        "pkg": {
          "command": true,
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": undefined,
          "path": undefined,
          "pkg": "all",
          "postcommand": null,
          "precommand": null,
        },
        "release": {
          "changes": [
            {
              "releases": {
                "all": "minor",
              },
              "summary": "This is a test.",
            },
          ],
          "type": "minor",
        },
      },
    },
    "assemble1": {
      "name": "assemble1",
      "pipe": {
        "pkg": {
          "command": true,
          "dependencies": [
            "assemble1",
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": undefined,
          "path": "./packages/assemble1",
          "pkg": "assemble1",
          "postcommand": null,
          "precommand": null,
        },
        "release": {
          "changes": [
            {
              "releases": {
                "assemble1": "patch",
              },
              "summary": "This is a test.",
            },
          ],
          "type": "minor",
        },
      },
    },
    "assemble2": {
      "name": "assemble2",
      "pipe": {
        "pkg": {
          "command": true,
          "dependencies": [
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": undefined,
          "path": "./packages/assemble2",
          "pkg": "assemble2",
          "postcommand": null,
          "precommand": null,
        },
        "release": {
          "changes": [
            {
              "releases": {
                "all": "minor",
              },
              "summary": "This is a test.",
            },
          ],
          "type": "minor",
        },
      },
    },
  },
}
`;

exports[`merge config > full config > merges publish 1`] = `
{
  "commands": [
    {
      "command": [
        "npm publish",
      ],
      "dependencies": [
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": "javascript",
      "path": "./packages/assemble1",
      "pkg": "assemble1",
      "pkgFile": {
        "currentVersion": "0.0.0",
        "deps": {},
        "file": {
          "content": "{
  "name": "assemble1",
  "version": "0.0.0"
}
",
          "extname": ".json",
          "filename": "package",
          "path": "packages/assemble1/package.json",
        },
        "name": "assemble1",
        "pkg": {
          "name": "assemble1",
          "version": "0.0.0",
        },
        "version": "0.0.0",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 0,
        "versionPrerelease": null,
      },
      "postcommand": null,
      "precommand": null,
      "releaseTag": "assemble1-v0.0.0",
    },
    {
      "command": [
        "cargo publish",
      ],
      "dependencies": [
        "assemble1",
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": "cargo",
      "path": "./packages/namespaced-assemble2",
      "pkg": "@namespaced/assemble1",
      "pkgFile": {
        "currentVersion": "0.0.0",
        "deps": {},
        "file": {
          "content": "{
  "name": "@namedspaced/assemble2",
  "version": "0.0.0"
}
",
          "extname": ".json",
          "filename": "package",
          "path": "packages/namespaced-assemble2/package.json",
        },
        "name": "@namespaced/assemble1",
        "pkg": {
          "name": "@namedspaced/assemble2",
          "version": "0.0.0",
        },
        "version": "0.0.0",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 0,
        "versionPrerelease": null,
      },
      "postcommand": null,
      "precommand": null,
      "releaseTag": "@namespaced/assemble1-v0.0.0",
    },
    {
      "command": [
        "cargo publish",
      ],
      "dependencies": [
        "assemble2",
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": "cargo",
      "path": "./packages/namespaced-assemble2",
      "pkg": "@namespaced/assemble2",
      "pkgFile": {
        "currentVersion": "0.0.0",
        "deps": {},
        "file": {
          "content": "{
  "name": "@namedspaced/assemble2",
  "version": "0.0.0"
}
",
          "extname": ".json",
          "filename": "package",
          "path": "packages/namespaced-assemble2/package.json",
        },
        "name": "@namespaced/assemble2",
        "pkg": {
          "name": "@namedspaced/assemble2",
          "version": "0.0.0",
        },
        "version": "0.0.0",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 0,
        "versionPrerelease": null,
      },
      "postcommand": null,
      "precommand": null,
      "releaseTag": "@namespaced/assemble2-v0.0.0",
    },
  ],
  "pipeTemplate": {
    "@namespaced/assemble1": {
      "name": "@namespaced/assemble1",
      "pipe": {
        "pkg": {
          "command": "cargo publish",
          "dependencies": [
            "assemble1",
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": "cargo",
          "path": "./packages/namespaced-assemble2",
          "pkg": "@namespaced/assemble1",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "0.0.0",
          "deps": {},
          "name": "@namespaced/assemble1",
          "pkg": {
            "name": "@namedspaced/assemble2",
            "version": "0.0.0",
          },
          "version": "0.0.0",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 0,
        },
      },
    },
    "@namespaced/assemble2": {
      "name": "@namespaced/assemble2",
      "pipe": {
        "pkg": {
          "command": "cargo publish",
          "dependencies": [
            "assemble2",
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": "cargo",
          "path": "./packages/namespaced-assemble2",
          "pkg": "@namespaced/assemble2",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "0.0.0",
          "deps": {},
          "name": "@namespaced/assemble2",
          "pkg": {
            "name": "@namedspaced/assemble2",
            "version": "0.0.0",
          },
          "version": "0.0.0",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 0,
        },
      },
    },
    "assemble1": {
      "name": "assemble1",
      "pipe": {
        "pkg": {
          "command": "npm publish",
          "dependencies": [
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/assemble1",
          "pkg": "assemble1",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "0.0.0",
          "deps": {},
          "name": "assemble1",
          "pkg": {
            "name": "assemble1",
            "version": "0.0.0",
          },
          "version": "0.0.0",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 0,
        },
      },
    },
  },
}
`;

exports[`merge config > full config > merges version 1`] = `
{
  "commands": [
    {
      "command": [
        "cargo version patch",
      ],
      "dependencies": [
        "assemble2",
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": "cargo",
      "path": "./packages/namespaced-assemble2",
      "pkg": "@namespaced/assemble2",
      "postcommand": null,
      "precommand": null,
      "type": "patch",
    },
    {
      "command": [
        "lerna version minor --no-git-tag-version --no-push",
      ],
      "dependencies": [
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": "javascript",
      "path": "./packages/assemble1",
      "pkg": "assemble1",
      "postcommand": null,
      "precommand": null,
      "type": "minor",
    },
    {
      "command": [
        "lerna version major",
      ],
      "dependencies": [
        "all",
      ],
      "errorOnVersionRange": null,
      "manager": undefined,
      "path": "./packages/assemble2",
      "pkg": "assemble2",
      "postcommand": null,
      "precommand": null,
      "type": "major",
    },
  ],
  "pipeTemplate": {
    "@namespaced/assemble2": {
      "name": "@namespaced/assemble2",
      "pipe": {
        "pkg": {
          "command": "cargo version \${ release.type }",
          "dependencies": [
            "assemble2",
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": "cargo",
          "path": "./packages/namespaced-assemble2",
          "pkg": "@namespaced/assemble2",
          "postcommand": null,
          "precommand": null,
        },
        "release": {
          "changes": [
            {
              "releases": {
                "@namespaced/assemble2": "patch",
                "assemble1": "patch",
              },
              "summary": "This is a namespaced test.",
            },
          ],
          "type": "patch",
        },
      },
    },
    "assemble1": {
      "name": "assemble1",
      "pipe": {
        "pkg": {
          "command": "lerna version \${ release.type } --no-git-tag-version --no-push",
          "dependencies": [
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/assemble1",
          "pkg": "assemble1",
          "postcommand": null,
          "precommand": null,
        },
        "release": {
          "changes": [
            {
              "releases": {
                "assemble1": "patch",
                "assemble2": "patch",
              },
              "summary": "This is a a double patch test.",
            },
            {
              "releases": {
                "assemble1": "minor",
                "assemble2": "patch",
              },
              "summary": "This is a minor/patch test.",
            },
            {
              "releases": {
                "assemble1": "patch",
                "assemble2": "major",
              },
              "summary": "This is a patch/major test.",
            },
            {
              "releases": {
                "@namespaced/assemble2": "patch",
                "assemble1": "patch",
              },
              "summary": "This is another double patch test.",
            },
          ],
          "type": "minor",
        },
      },
    },
    "assemble2": {
      "name": "assemble2",
      "pipe": {
        "pkg": {
          "command": "lerna version \${ release.type }",
          "dependencies": [
            "all",
          ],
          "errorOnVersionRange": null,
          "manager": undefined,
          "path": "./packages/assemble2",
          "pkg": "assemble2",
          "postcommand": null,
          "precommand": null,
        },
        "release": {
          "changes": [
            {
              "releases": {
                "assemble1": "patch",
                "assemble2": "patch",
              },
              "summary": "This is the copy of the double patch test.",
            },
            {
              "releases": {
                "assemble1": "minor",
                "assemble2": "patch",
              },
              "summary": "This is the copy of the minor patch test.",
            },
            {
              "releases": {
                "assemble1": "patch",
                "assemble2": "major",
              },
              "summary": "This is the copy of the patch major test.",
            },
          ],
          "type": "major",
        },
      },
    },
  },
}
`;

exports[`merge config > full config > merges version without command 1`] = `
{
  "commands": [],
  "pipeTemplate": {},
}
`;
